--- a/StudyCpp/StudyCpp/StudyCpp.vcxproj
+++ b/StudyCpp/StudyCpp/StudyCpp.vcxproj
@@ -64,6 +64,11 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
   </PropertyGroup>
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <ClCompile>
+      <LanguageStandard>stdcpp17</LanguageStandard>
+    </ClCompile>
+  </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="Configuration">
     <ClCompile>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
@@ -94,6 +99,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="FunCallBack.cpp" />
+    <ClCompile Include="NameSpaceClass.cpp" />
+    <ClCompile Include="OperatorClass.cpp" />
+    <ClCompile Include="SmartPointer.cpp" />
+    <ClCompile Include="VariantClass.cpp" />
     <ClCompile Include="VarParamClass.cpp" />
     <QtRcc Include="StudyC.qrc" />
     <QtUic Include="StudyC.ui" />
@@ -103,7 +112,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FunCallBack.h" />
+    <ClInclude Include="NameSpaceClass.h" />
+    <ClInclude Include="OperatorClass.h" />
+    <ClInclude Include="SmartPointer.h" />
     <ClInclude Include="TempLateClass.h" />
+    <ClInclude Include="VariantClass.h" />
     <ClInclude Include="VarParamClass.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
