--- a/StudyCpp/StudyCpp/StudyCpp.vcxproj.filters
+++ b/StudyCpp/StudyCpp/StudyCpp.vcxproj.filters
@@ -58,6 +58,12 @@
     <ClCompile Include="OperatorClass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ThreadClass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CompileClass.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="VarParamClass.h">
@@ -79,6 +85,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="OperatorClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ThreadClass.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CompileClass.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
