add async therad

--- a/StudyCpp/StudyCpp/StudyCpp.vcxproj
+++ b/StudyCpp/StudyCpp/StudyCpp.vcxproj
@@ -103,6 +103,7 @@
     <ClCompile Include="NameSpaceClass.cpp" />
     <ClCompile Include="OperatorClass.cpp" />
     <ClCompile Include="SmartPointer.cpp" />
+    <ClCompile Include="ThreadAsync.cpp" />
     <ClCompile Include="ThreadClass.cpp" />
     <ClCompile Include="VariantClass.cpp" />
     <ClCompile Include="VarParamClass.cpp" />
@@ -119,6 +120,7 @@
     <ClInclude Include="OperatorClass.h" />
     <ClInclude Include="SmartPointer.h" />
     <ClInclude Include="TempLateClass.h" />
+    <ClInclude Include="ThreadAsync.h" />
     <ClInclude Include="ThreadClass.h" />
     <ClInclude Include="VariantClass.h" />
     <ClInclude Include="VarParamClass.h" />
