--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
-/StudyCpp/.vs/
-/StudyCpp/StudyCpp/x64/
-/StudyCpp/x64/
+**/.vs/
+**/.vscode/
+**/x86/
+**/x64/
+**/[Dd]ebug/
+**/[Rr]elease/
+**/[Bb]uild/
+**/[Ll]ogs/
