update some example

--- a/StudyCpp/StudyCpp/CMakeLists.txt
+++ b/StudyCpp/StudyCpp/CMakeLists.txt
@@ -121,3 +121,8 @@ Qt6::Widgets
 Qt6::Gui 
 reflectcpp
 ${LINK_LIBS})
+
+
+# set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)  #设置子项目c++编译版本
+# set_property(TARGET ${PROJECT_NAME} PROPERTY ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/libs)
+# set_property(TARGET ${PROJECT_NAME} PROPERTY RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
